fix alignment in occupation detail pane, closes #142

--- a/css/custom.css
+++ b/css/custom.css
@@ -861,8 +861,11 @@ hr {
     font-size: 20px;
   }
 
+  #occ-detail-top{
+    margin-bottom: 12px;
+  }
   .occ-figure-title{
-    font-size: 18px;
+    font-size: 14px;
   }
   .label-occ{
     font-size: 24px;
